Fix layout issue with widget column on news posts
Reduce column width to eliminate visual crowding between widgets and the edge of the content area.

--- a/CSS/src_cr-new.less
+++ b/CSS/src_cr-new.less
@@ -1019,6 +1019,14 @@ article > div.article-body {
 	display: none;
 }
 
+.single-post .column.two {
+	@media screen and (min-width: 694px) {
+		margin-right: 2rem;
+		width: 30%;
+		width: calc(33% - 2rem);
+	}
+}
+
 .main-header {
 	background-color: @hex-crimson;
 }
